Refactored project to include request caching, asynchronous capabilities, browser profiles, optimized header management, connection pooling, enhanced error handling, rate limiting, HTML parsing optimization, smart retries, and proxy rotation support. Added test for CLI web address input and started working on a GUI upgrade for a modern look.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BM25 OpenAI RAG Chatbot</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>OpenAI Chatbot</h1>
-    <input id="user-input" type="text" placeholder="Enter your query here">
-    <button id="submit-button" onclick="submitQuery()">Submit</button>
-    <div id="response"></div>
+    <div class="container">
+        <h1>BM25 OpenAI RAG Chatbot</h1>
+        <div class="chat-container">
+            <div id="chat-messages"></div>
+            <div class="input-container">
+                <input id="user-input" type="text" placeholder="Enter your query here">
+                <button id="submit-button">Send</button>
+            </div>
+        </div>
+    </div>
+    <div id="loading" class="loading">
+        <div class="spinner"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
