Added error handling in the backend to return proper error messages, implemented rate limiting to prevent API abuse, and added a feature to clear chat history. Updated the readme to explain usage for Windows 10/11.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,6 +12,7 @@
         <div class="chat-container">
             <div id="chat-messages"></div>
             <div class="input-container">
+                <button id="clear-chat">Clear Chat</button>
                 <input id="user-input" type="text" placeholder="Enter your query here">
                 <button id="submit-button">Send</button>
             </div>
