--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BM25 OpenAI RAG Chatbot</title>
+    <title>Advanced RAG Chatbot</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>BM25 OpenAI RAG Chatbot</h1>
+        <h1>Advanced RAG Chatbot</h1>
         <div class="chat-container">
             <div id="chat-messages"></div>
             <div class="input-container">
@@ -21,6 +22,7 @@
     <div id="loading" class="loading">
         <div class="spinner"></div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.0.3/marked.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
