Designed and implemented a stylish frontend for the chatbot utilizing a custom rag design, replacing the existing frontend and ensuring its functionality.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced RAG Chatbot</title>
+    <title>Stylish RAG Chatbot</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Advanced RAG Chatbot</h1>
+        <h1>Welcome to Your Stylish Chatbot</h1>
         <div class="chat-container">
             <div id="chat-messages"></div>
             <div class="input-container">
@@ -18,7 +18,7 @@
                 <button id="submit-button">Send</button>
             </div>
         </div>
-    </div>
+        <footer>Powered by OpenAI & Langchain</footer>
     <div id="loading" class="loading">
         <div class="spinner"></div>
     </div>
